# contractguard

./: .gitignore  CAPABILITIES.md  DEPLOYMENT.md  INSTRUCTIONS.md  README.md  package-lock.json  package.json  pyproject.toml  python-requirements.txt  tsconfig.json
.github/workflows/: contractguard-ci.yml
samples/config/: dangerous.env
samples/secrets/: leaked.env
src/contractguard/: __init__.py  bridge.py  cli.py  engine.py  reporter.py  scan.py
src/contractguard/analyzers/: config_analyzer.py  dependency_analyzer.py  file_filters.py  json_analyzer.py  pii_analyzer.py  secrets_analyzer.py
tests/: test_bridge.py  test_config_analyzer.py  test_dependency_analyzer.py  test_engine.py  test_pii_analyzer.py  test_reporter.py  test_scan.py  test_secrets_analyzer.py
vscode-src/: extension.ts  findingsTree.ts  pythonBridge.ts  types.ts
